# hotpath-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  hotpath_adoption.json  justfile
crates/hotpath/: Cargo.toml  README.md
crates/hotpath-backend/: Cargo.toml  README.md  deploy.sh
crates/hotpath-backend/html_src/: assets-manifest.json  book.toml
crates/hotpath-backend/html_src/src/: 404.md  SUMMARY.md  benchmarks.md  channels.md  configuration.md  cpu_profiling.md  custom.css  data_flow.md  debug.md  functions.md  futures.md  github_ci.md  introduction.md  mcp.md  profiling_modes.md  sampling_comparison.md  streams.md  terms.md  threads.md  tokio_runtime.md
crates/hotpath-backend/html_src/theme/: index.hbs
crates/hotpath-backend/remote/: restart.sh
crates/hotpath-backend/src/: auth.rs
crates/hotpath-backend/src/config/: middleware.rs  routes.rs
crates/hotpath-macros/: Cargo.toml  README.md
crates/hotpath-macros-meta/: Cargo.toml  README.md
crates/hotpath-macros-meta/src/: lib.rs  lib_on.rs
crates/hotpath-macros/src/: lib.rs  lib_on.rs
crates/hotpath-meta/: Cargo.toml  README.md
crates/hotpath-meta/src/: dev_logging.rs  json.rs  lib.rs  lib_off.rs  lib_on.rs  mcp_server.rs  metrics_server.rs  output.rs  output_on.rs  shared.rs
crates/hotpath-meta/src/json/: formatted.rs
crates/hotpath-meta/src/lib_on/: batch.rs  channels.rs  cpu_baseline.rs  data_flow.rs  debug.rs  functions.rs  futures.rs  hotpath_guard.rs  mutexes.rs  report.rs  rw_locks.rs  sql.rs  streams.rs  threads.rs  tokio_runtime.rs
crates/hotpath-meta/src/lib_on/channels/: guard.rs  wrapper.rs
crates/hotpath-meta/src/lib_on/debug/: dbg.rs  gauge.rs  val.rs
crates/hotpath-meta/src/lib_on/functions/: alloc.rs  cpu.rs
crates/hotpath-meta/src/lib_on/futures/: guard.rs  wrapper.rs
crates/hotpath-meta/src/lib_on/streams/: guard.rs  wrapper.rs
crates/hotpath-meta/src/lib_on/threads/: collector_linux.rs  collector_windows.rs  guard.rs
crates/hotpath/benches/: benchmark_gauge.rs
crates/hotpath/linux-dev/: Dockerfile  README.md  setup.sh
crates/hotpath/src/: dev_logging.rs  formatted.rs  instant.rs  json.rs  lib.rs  lib_off.rs  lib_on.rs  mcp_server.rs  metrics_server.rs  output.rs  output_on.rs  shared.rs  tid.rs
crates/hotpath/src/json/: formatted.rs
crates/hotpath/src/lib_on/: batch.rs  channels.rs  cpu_baseline.rs  data_flow.rs  debug.rs  formatted.rs  functions.rs  futures.rs  hotpath_guard.rs  mutexes.rs  report.rs  rw_locks.rs  sql.rs  streams.rs  threads.rs  tokio_runtime.rs
crates/hotpath/src/lib_on/channels/: guard.rs  wrapper.rs
crates/hotpath/src/lib_on/debug/: dbg.rs  gauge.rs  val.rs  value.rs
crates/hotpath/src/lib_on/functions/: batch.rs  cpu.rs  guard.rs
crates/hotpath/src/lib_on/futures/: guard.rs  wrapper.rs
crates/hotpath/src/lib_on/mutexes/: wrapper.rs
crates/hotpath/src/lib_on/rw_locks/: wrapper.rs
crates/hotpath/src/lib_on/sql/: diesel.rs  normalize.rs  tracing_layer.rs
crates/hotpath/src/mcp_server/: output.rs
crates/hotpath/tests/: channels_asc.rs  channels_crossbeam.rs  channels_crossbeam_wrap.rs  channels_flume.rs  channels_flume_wrap.rs  channels_ftc.rs  channels_std.rs  channels_std_wrap.rs  channels_tokio.rs  channels_tokio_wrap.rs  debug.rs  diesel.rs  functions.rs  functions_alloc.rs  functions_cpu.rs  functions_timing.rs  futures.rs  mutex_std.rs  mutex_tokio.rs  rw_lock_parking_lot.rs  rw_lock_std.rs  sql.rs  streams.rs  threads.rs  tokio_runtime.rs
crates/test-all-features/: Cargo.toml  README.md
crates/test-all-features/examples/: all_noop.rs
crates/test-channels-asc/: Cargo.toml  README.md
crates/test-channels-asc/examples/: basic_asc.rs  basic_json_asc.rs  benchmark_channel_asc.rs  closed_asc.rs  console_feed_asc.rs  iter_asc.rs  slow_consumer_asc.rs
crates/test-channels-crossbeam/: Cargo.toml  README.md
crates/test-channels-crossbeam/examples/: basic_crossbeam.rs  basic_json_crossbeam.rs  benchmark_channel_crossbeam.rs  benchmark_channel_wrap_crossbeam.rs  closed_crossbeam.rs  console_feed_crossbeam.rs  crossbeam_wrap_little.rs  iter_crossbeam.rs  slow_consumer_crossbeam.rs  wrap_closed_crossbeam.rs  wrap_crossbeam.rs  wrap_latency_crossbeam.rs  wrap_recv_clone_closed_crossbeam.rs
crates/test-channels-ftc/: Cargo.toml  README.md
crates/test-channels-ftc/examples/: basic_ftc.rs  basic_json_ftc.rs  benchmark_channel_ftc.rs  closed_ftc.rs  console_feed_ftc.rs  iter_ftc.rs  oneshot_closed_ftc.rs  slow_consumer_ftc.rs
crates/test-channels-tokio/: Cargo.toml  README.md
crates/test-channels-tokio/examples/: basic_json_tokio.rs  basic_tokio.rs  benchmark_channel_tokio.rs  benchmark_channel_wrap_tokio.rs  channels_file_output.rs  closed_tokio.rs  console_feed_tokio.rs  guard_timeout_channels.rs  iter_tokio.rs  oneshot_closed_tokio.rs  slow_consumer_tokio.rs  wrap_closed_tokio.rs  wrap_concurrent_tokio.rs  wrap_tokio.rs  wrap_unbounded_tokio.rs
crates/test-diesel/: Cargo.toml
crates/test-diesel/examples/: basic.rs
crates/test-mutex-tokio/: Cargo.toml
crates/test-mutex-tokio/examples/: basic_mutex_tokio.rs  benchmark_mutex_tokio.rs
crates/test-rw-lock-async-lock/: Cargo.toml
crates/test-rw-lock-async-lock/examples/: basic_rw_lock_async_lock.rs  benchmark_rw_lock_async_lock.rs
crates/test-smol-async/: Cargo.toml  README.md
crates/test-sqlx-08/: Cargo.toml
crates/test-sqlx-08/examples/: basic.rs  long_running.rs
crates/test-streams/: Cargo.toml  README.md
crates/test-streams/examples/: basic_streams.rs  benchmark_stream.rs  guard_timeout_streams.rs  streams_file_output.rs
crates/test-tokio-async/: Cargo.toml  README.md
crates/test-tokio-async/examples/: async_alloc_measure.rs  basic.rs  benchmark_alloc.rs  benchmark_instant.rs  benchmark_load.rs  benchmark_noop.rs  benchmark_truncate.rs  cpu_basic.rs  cpu_inline.rs  cpu_multithread.rs  cpu_nested.rs  cpu_symbols.rs  csv_file_reporter.rs  custom_guard.rs  guard_timeout.rs  guard_timeout_functions.rs  guard_timeout_threads.rs  hotpath_adoption.rs  measure_all_impl_return_closure.rs  overview.rs  unit_test.rs
(+146 files in other folders)
