[workspace]
members = [
    "crates/hotpath-macros",
    "crates/hotpath",
    "crates/test-tokio-async",
    "crates/test-smol-async",
    "crates/test-all-features",
    "crates/test-channels-asc",
    "crates/test-channels-crossbeam",
    "crates/test-channels-ftc",
    "crates/test-channels-flume",
    "crates/test-channels-std",
    "crates/test-rw-lock-std",
    "crates/test-rw-lock-parking-lot",
    "crates/test-rw-lock-async-lock",
    "crates/test-rw-lock-tokio",
    "crates/test-mutex-std",
    "crates/test-mutex-tokio",
    "crates/test-mutex-async-lock",
    "crates/test-streams",
    "crates/test-sqlx-08",
    "crates/test-sqlx-09",
    "crates/test-diesel",
    "crates/test-channels-tokio",
    "crates/test-futures",
    "crates/test-debug",
    "crates/hotpath-meta",
    "crates/hotpath-macros-meta",
]
resolver = "2"

[workspace.dependencies]
hotpath-macros = { path = "./crates/hotpath-macros", version = "0.18.0" }
hotpath = { path = "./crates/hotpath", version = "0.18.0" }
hotpath-meta = { path = "./crates/hotpath-meta", version = "0.18.0" }
hotpath-macros-meta = { path = "./crates/hotpath-macros-meta", version = "0.18.0" }
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }

[profile.profiling]
inherits = "release"
debug = true
