[package]
name = "hotpath-backend"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
url = "2.5.0"
uuid = { version = "1.11.0", features = ["v4"] }
eyre = "0.6.12"
serde_json = "1.0.138"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["time", "env-filter"] }
tracing = "0.1.41"
tracing-futures = "0.2"
tower-http = { version = "0.6.2", features = [
  "fs",
  "trace",
  "timeout",
  "compression-gzip",
  "compression-br",
  "compression-deflate",
  "catch-panic",
  "set-header",
] }
tower = "0.5.2"
futures = "0.3.31"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal", "english"] }
tracing-appender = "0.2.3"
time = { version = "0.3.37", features = ["formatting"] }
axum = { version = "0.8.7" }
futures-util = "0.3.31"
unicode-normalization = "0.1.24"
regex = "1.11.1"
tokio-stream = "0.1.17"
rand = "0.9.2"
hotpath = { path = "../hotpath" }
http-body-util = "0.1.2"

[dev-dependencies]
glob = "0.3.1"
reqwest = { version = "0.12", features = ["json"] }
mockito = "1.5.0"
http-body-util = "0.1.2"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "clean-html-links"
path = "bin/clean-html-links.rs"
