[package]
name = "hotpath-macros-meta"
version = "0.16.1"
edition = "2021"
description = "Hotpath meta - a version of hotpath used to profile the profiler itself. Not intended for external use. Proc macros crate."
repository = "https://github.com/pawurb/hotpath-rs"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath-meta = ["dep:proc-macro2", "dep:quote", "dep:syn"]
hotpath-off-meta = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
