[package]
name = "hotpath-macros"
version = "0.14.0"
edition = "2021"
repository = "https://github.com/pawurb/hotpath-rs"
description = "Simple async Rust profiler with memory and data-flow insights - quickly find and debug performance bottlenecks. Proc macros crate."
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = ["dep:proc-macro2", "dep:quote", "dep:syn"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = ["hotpath", "hotpath-alloc"]
