[package]
name = "hotpath-macros"
version = "0.19.1"
edition = "2021"
repository = "https://github.com/pawurb/hotpath-rs"
description = "One profiler for CPU, time, memory, SQL, and async code - quickly find and debug performance bottlenecks. Proc macros crate."
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = ["dep:proc-macro2", "dep:quote", "dep:syn"]
hotpath-cpu = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = ["hotpath", "hotpath-alloc"]
