[package]
name = "test-all-features"
version = "0.0.0"
publish = false
edition = "2021"
description = "Tests with all feature flags enabled."

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

[dependencies]
hotpath = { path = "../hotpath", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
