[package]
name = "test-channels-crossbeam"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tests for crossbeam channels instrumentation."

[dependencies]
hotpath = { workspace = true, features = ["crossbeam"] }
crossbeam-channel = "0.5"

[features]
hotpath = ["hotpath/hotpath"]

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
serde_json = "1.0"
