[package]
name = "test-channels-crossbeam"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tests for crossbeam channels instrumentation."

[dependencies]
hotpath = { workspace = true, features = ["crossbeam"] }
crossbeam-channel = "0.5"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-cpu = ["hotpath/hotpath-cpu"]
hotpath-meta = ["hotpath/hotpath-meta"]
hotpath-alloc-meta = ["hotpath/hotpath-alloc-meta"]

[dev-dependencies]
ureq = { version = "3", features = ["json"] }
serde_json = "1.0"

# Reads the metrics endpoint and uses hotpath::json / format helpers, all gated
# behind the `hotpath` feature.
[[example]]
name = "crossbeam_wrap_little"
required-features = ["hotpath"]
