[package]
name = "test-channels-ftc"
version = "0.0.0"
publish = false
edition = "2021"
description = "Tests for futures channels instrumentation."

[dependencies]
hotpath = { workspace = true, features = ["futures"] }
futures-channel = "0.3"
futures-util = "0.3"
smol = "2.0"
async-io = "2.0"

[features]
hotpath = ["hotpath/hotpath"]
