[package]
name = "test-rw-lock-async-lock"
version = "0.0.0"
publish = false
edition = "2021"
description = "Tests for async-lock RwLock instrumentation."

[dependencies]
hotpath = { workspace = true, features = ["async-lock"] }
async-lock = "3"
futures-lite = "2"

[features]
hotpath = ["hotpath/hotpath"]
