[package]
name = "test-streams"
version = "0.0.0"
publish = false
edition = "2021"
description = "Tests for streams instrumentation."

[dependencies]
hotpath = { workspace = true, features = ["futures"] }
futures-util = "0.3"
smol = "2.0"

[dev-dependencies]
ureq = "3"
serde_json = "1.0"

[features]
hotpath = ["hotpath/hotpath"]
