[package]
name = "test-tokio-async"
version = "0.0.0"
publish = false
edition = "2021"
description = "Integration tests and examples using the Tokio runtime."

[dependencies]
hotpath = { path = "../hotpath", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
rand = "0.8"
futures-util = "0.3"
num-bigint = "0.4"

[features]
default = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
